Fix Card layout issue for smaller screen.

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -84,10 +84,6 @@ div.content {
 }
 
 @media only screen and (min-width: 768px) {
-    div.navigator {
-        left: 10rem;
-    }
-
     div.navigator a.navigator-btn {
         font-size: 1.2rem;
         padding: 0.8rem 1rem;
@@ -108,5 +104,11 @@ div.content {
 
     .hide-sm {
         display: initial;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    div.navigator {
+        left: 10rem;
     }
 }
