--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -86,6 +86,7 @@ div.card {
     position: relative;
     display: inline-table;
     margin-left: 0;
+    margin-top: 2rem;
 }
 
 div.card-header {
@@ -172,12 +173,12 @@ div.canvas-card .card-header {
 #billiard-canvas {
     width: 100%;
     height: 100%;
+    border: 1px solid #c7c3c3;
 }
 
 @media only screen and (min-width: 768px) {
     div.card {
         width: 28rem;
-        margin-left: 20px;
     }
     div.canvas-card {
         width: 35rem;
@@ -192,6 +193,11 @@ div.canvas-card .card-header {
 }
 
 @media only screen and (min-width: 992px) {
+    div.card {
+        margin-left: 3rem;
+        margin-top: 0;
+    }
+
     div.slide-title {
         font-size: 2rem;
     }
